--- a/portfolio.html
+++ b/portfolio.html
@@ -1,25 +1,26 @@
 <body>
   <header>
-    <nav>
-      <a href="./index.html">WebStudio</a>
-      <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
+    <nav class="nav">
+      <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
+      <ul class="list">
+
+        <li class="nav-li-first"><a href="./index.html" class="link">Studio</a></li>
+        <li class="nav-li-first"><a href="./portfolio.html" class="link">Portfolio</a></li>
+        <li class="nav-li-first"><a href="" class="link">Contacts</a></li>
       </ul>
     </nav>
-    <address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <address class="address">
+      <ul class="list">
+        <li><a href="mailto:info@devstudio.com" class="link address-link">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
   </header>
   <main>
-    <section>
-      <h2>Our Team</h2>
+    <section class="first-section">
+      <h2 class="first-section-h">Our Team</h2>
       <ul>
-        <li><button type="button">All</button></li>
+        <li><button type="button" class="first-section-button">All</button></li>
         <li><button type="button">Web Site</button></li>
         <li><button type="button">App</button></li>
         <li><button type="button">Desing</button></li>
@@ -28,8 +29,8 @@
     </section>
     <section>
       <h2>Our Team</h2>
-      <ul>
-        <li>
+      <ul class="list">
+        <li class="second-section-li">
           <img src="./images/img4.jpg" alt="img" width="360" height="300" />
           <h3>Banking App Interface Concept</h3>
           <p>App</p>
