--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+      <nav class="nav">
+        <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
+        <ul class="list">
+  
+          <li class="nav-li-first"><a href="./index.html" class="link">Studio</a></li>
+          <li class="nav-li-first"><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li class="nav-li-first"><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="list">
+          <li><a href="mailto:info@devstudio.com" class="link address-link">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
