--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
       <h2 class="first-section-h">Our Team</h2>
       <ul>
         <li><button type="button" class="first-section-button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Desing</button></li>
-        <li><button type="button">Marketing</button></li>
+        <li><button type="button" class="first-section-button">Web Site</button></li>
+        <li><button type="button" class="first-section-button">App</button></li>
+        <li><button type="button" class="first-section-button">Desing</button></li>
+        <li><button type="button" class="first-section-button">Marketing</button></li>
       </ul>
     </section>
     <section>
