--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="first-section">
+        <h1 class="first-section-h">Effective Solutions for Your Business</h1>
+        <button type="button" class="first-section-button">Order Service</button>
       </section>
 
       <section>
