Second section styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,20 +17,20 @@
     </address>
   </header>
   <main>
-    <section class="first-section">
-      <h2 class="first-section-h">Our Team</h2>
+    <section>
+      <h2>Our Team</h2>
       <ul>
-        <li><button type="button" class="first-section-button">All</button></li>
-        <li><button type="button" class="first-section-button">Web Site</button></li>
-        <li><button type="button" class="first-section-button">App</button></li>
-        <li><button type="button" class="first-section-button">Desing</button></li>
-        <li><button type="button" class="first-section-button">Marketing</button></li>
+        <li><button type="button">All</button></li>
+        <li><button type="button">Web Site</button></li>
+        <li><button type="button">App</button></li>
+        <li><button type="button">Desing</button></li>
+        <li><button type="button">Marketing</button></li>
       </ul>
     </section>
     <section>
       <h2>Our Team</h2>
-      <ul class="list">
-        <li class="second-section-li">
+      <ul>
+        <li>
           <img src="./images/img4.jpg" alt="img" width="360" height="300" />
           <h3>Banking App Interface Concept</h3>
           <p>App</p>
