Add styling to third section

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       </section>
 
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="third-section">What are we doing</h2>
+        <ul class="list">
           <li>
             <img src="./images/img1.jpg" alt="img1" width="360" height="300" />
           </li>
