--- a/index.html
+++ b/index.html
@@ -6,64 +6,80 @@
       name="description"
       content="Effective Solutions
     for Your Business"
-    /> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Webstudio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-span">Studio</span></a
+        >
         <ul class="list">
-  
-          <li class="nav-li-first"><a href="./index.html" class="link">Studio</a></li>
-          <li class="nav-li-first"><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li class="nav-li-first">
+            <a href="./index.html" class="link">Studio</a>
+          </li>
+          <li class="nav-li-first">
+            <a href="./portfolio.html" class="link">Portfolio</a>
+          </li>
           <li class="nav-li-first"><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
         <ul class="list">
-          <li><a href="mailto:info@devstudio.com" class="link address-link">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="link address-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <section class="first-section">
         <h1 class="first-section-h">Effective Solutions for Your Business</h1>
-        <button type="button" class="first-section-button">Order Service</button>
+        <button type="button" class="first-section-button">
+          Order Service
+        </button>
       </section>
 
       <section>
         <h2>123</h2>
         <ul class="list">
           <li class="second-section-li">
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="second-section-h">Strategy</h3>
+            <p class="second-section-p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="second-section-li">
             <h3>Punctuality</h3>
-            <p>
+            <p class="second-section-p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="second-section-li">
             <h3>Diligence</h3>
-            <p>
+            <p class="second-section-p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="second-section-li">
             <h3>Technologies</h3>
-            <p>
+            <p class="second-section-p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -72,7 +88,7 @@
       </section>
 
       <section>
-        <h2 class="third-section">What are we doing</h2>
+        <h2 class="third-section-h">What are we doing</h2>
         <ul class="list">
           <li>
             <img src="./images/img1.jpg" alt="img1" width="360" height="300" />
@@ -86,12 +102,12 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+      <section class="forth-section">
+        <h2 class="forth-section-h">Our Team</h2>
+        <ul class="list">
+          <li class="forth-section-li">
+            <h3 class="forth-section-li-h">Mark Guerrero</h3>
+            <p class="forth-section-li-p">Product Designer</p>
             <img
               src="./images/team1.jpg"
               alt="team1"
@@ -99,9 +115,9 @@
               height="380"
             />
           </li>
-          <li>
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+          <li class="forth-section-li">
+            <h3 class="forth-section-li-h">Tom Ford</h3>
+            <p class="forth-section-li-p">Frontend Developer</p>
             <img
               src="./images/team2.jpg"
               alt="team2"
@@ -109,9 +125,9 @@
               height="380"
             />
           </li>
-          <li>
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+          <li class="forth-section-li">
+            <h3 class="forth-section-li-h">Camila Garcia</h3>
+            <p class="forth-section-li-p">Marketing</p>
             <img
               src="./images/team3.jpg"
               alt="team3"
@@ -119,9 +135,9 @@
               height="380"
             />
           </li>
-          <li>
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+          <li class="forth-section-li">
+            <h3 class="forth-section-li-h">Daniel Wilson</h3>
+            <p class="forth-section-li-p">UI Designer</p>
             <img
               src="./images/team4.jpg"
               alt="team4"
@@ -132,9 +148,11 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo link"
+        >Web<span class="logo-span">Studio</span></a
+      >
+      <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
