Add portfolio styling

--- a/index.html
+++ b/index.html
@@ -57,29 +57,29 @@
         <h2>123</h2>
         <ul class="list">
           <li class="second-section-li">
-            <h3 class="second-section-h">Strategy</h3>
-            <p class="second-section-p">
+            <h3 class="section-h">Strategy</h3>
+            <p class="section-p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="second-section-li">
             <h3>Punctuality</h3>
-            <p class="second-section-p">
+            <p class="section-p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="second-section-li">
             <h3>Diligence</h3>
-            <p class="second-section-p">
+            <p class="section-p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="second-section-li">
             <h3>Technologies</h3>
-            <p class="second-section-p">
+            <p class="section-p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -106,8 +106,8 @@
         <h2 class="forth-section-h">Our Team</h2>
         <ul class="list">
           <li class="forth-section-li">
-            <h3 class="forth-section-li-h">Mark Guerrero</h3>
-            <p class="forth-section-li-p">Product Designer</p>
+            <h3 class="section-h">Mark Guerrero</h3>
+            <p class="section-p">Product Designer</p>
             <img
               src="./images/team1.jpg"
               alt="team1"
@@ -116,8 +116,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="forth-section-li-h">Tom Ford</h3>
-            <p class="forth-section-li-p">Frontend Developer</p>
+            <h3 class="section-h">Tom Ford</h3>
+            <p class="section-p">Frontend Developer</p>
             <img
               src="./images/team2.jpg"
               alt="team2"
@@ -126,8 +126,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="forth-section-li-h">Camila Garcia</h3>
-            <p class="forth-section-li-p">Marketing</p>
+            <h3 class="section-h">Camila Garcia</h3>
+            <p class="section-p">Marketing</p>
             <img
               src="./images/team3.jpg"
               alt="team3"
@@ -136,8 +136,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="forth-section-li-h">Daniel Wilson</h3>
-            <p class="forth-section-li-p">UI Designer</p>
+            <h3 class="section-h">Daniel Wilson</h3>
+            <p class="section-p">UI Designer</p>
             <img
               src="./images/team4.jpg"
               alt="team4"
