--- a/portfolio.html
+++ b/portfolio.html
@@ -1,86 +1,150 @@
+<head>
+  <meta charset="utf-8" />
+  <meta
+    name="description"
+    content="Effective Solutions
+  for Your Business"
+  />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet"
+  />
+  <title>Webstudio</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 <body>
   <header>
     <nav class="nav">
-      <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
+      <a href="./index.html" class="logo link"
+        >Web<span class="logo-span">Studio</span></a
+      >
       <ul class="list">
-
-        <li class="nav-li-first"><a href="./index.html" class="link">Studio</a></li>
-        <li class="nav-li-first"><a href="./portfolio.html" class="link">Portfolio</a></li>
+        <li class="nav-li-first">
+          <a href="./index.html" class="link">Studio</a>
+        </li>
+        <li class="nav-li-first">
+          <a href="./portfolio.html" class="link">Portfolio</a>
+        </li>
         <li class="nav-li-first"><a href="" class="link">Contacts</a></li>
       </ul>
     </nav>
     <address class="address">
       <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="link address-link">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="link address-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+        </li>
       </ul>
     </address>
   </header>
   <main>
     <section>
-      <h2>Our Team</h2>
-      <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Desing</button></li>
-        <li><button type="button">Marketing</button></li>
+      <h1>Our Team</h1>
+      <ul class="list">
+        <li>
+          <button type="button" class="portfolio-first-section-button">
+            All
+          </button>
+        </li>
+        <li>
+          <button type="button" class="portfolio-first-section-button">
+            Web Site
+          </button>
+        </li>
+        <li>
+          <button type="button" class="portfolio-first-section-button">
+            App
+          </button>
+        </li>
+        <li>
+          <button type="button" class="portfolio-first-section-button">
+            Desing
+          </button>
+        </li>
+        <li>
+          <button type="button" class="portfolio-first-section-button">
+            Marketing
+          </button>
+        </li>
       </ul>
-    </section>
-    <section>
-      <h2>Our Team</h2>
-      <ul>
+      <ul class="list">
         <li>
-          <img src="./images/img4.jpg" alt="img" width="360" height="300" />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
+          <a href="" class="link"
+            ><img src="./images/img4.jpg" alt="img" width="360" height="300" />
+            <h2 class="section-h">Banking App Interface Concept</h2>
+            <p class="section-p">App</p></a
+          >
         </li>
         <li>
-          <img src="./images/img5.jpg" alt="img" width="360" height="300" />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+          <a href="" class="link"
+            ><img src="./images/img5.jpg" alt="img" width="360" height="300" />
+            <h2 class="section-h">Cashless Payment</h2>
+            <p class="section-p">Marketing</p></a
+          >
         </li>
         <li>
-          <img src="./images/img6.jpg" alt="img" width="360" height="300" />
-          <h3>Meditaion App</h3>
-          <p>App</p>
+          <a href="" class="link"
+            ><img src="./images/img6.jpg" alt="img" width="360" height="300" />
+            <h2 class="section-h">Meditaion App</h2>
+            <p class="section-p">App</p></a
+          >
         </li>
         <li>
-          <img src="./images/img7.jpg" alt="img" width="360" height="300" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+          <a href="" class="link"
+            ><img src="./images/img7.jpg" alt="img" width="360" height="300" />
+            <h2 class="section-h">Taxi Service</h2>
+            <p class="section-p">Marketing</p></a
+          >
         </li>
         <li>
-          <img src="./images/img8.jpg" alt="img" width="360" height="300" />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
+          <a href="" class="link"
+            ><img src="./images/img8.jpg" alt="img" width="360" height="300" />
+            <h2 class="section-h">Screen Illustrations</h2>
+            <p class="section-p">Design</p></a
+          >
         </li>
         <li>
-          <img src="./images/img9.jpg" alt="img" width="360" height="300" />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
+          <a href="" class="link"
+            ><img src="./images/img9.jpg" alt="img" width="360" height="300" />
+            <h2 class="section-h">Online Courses</h2>
+            <p class="section-p">Marketing</p></a
+          >
         </li>
         <li>
-          <img src="./images/img10.jpg" alt="img" width="360" height="300" />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
+          <a href="" class="link"
+            ><img src="./images/img10.jpg" alt="img" width="360" height="300" />
+            <h2 class="section-h">Instagram Stories Concept</h2>
+            <p class="section-p">Design</p></a
+          >
         </li>
         <li>
-          <img src="./images/img11.jpg" alt="img" width="360" height="300" />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
+          <a href="" class="link"
+            ><img src="./images/img11.jpg" alt="img" width="360" height="300" />
+            <h2 class="section-h">Organic Food</h2>
+            <p class="section-p">Web Site</p></a
+          >
         </li>
         <li>
-          <img src="./images/img12.jpg" alt="img" width="360" height="300" />
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
+          <a href="" class="link"
+            ><img src="./images/img12.jpg" alt="img" width="360" height="300" />
+            <h2 class="section-h">Fresh Coffee</h2>
+            <p class="section-p">Web Site</p></a
+          >
         </li>
       </ul>
     </section>
   </main>
-  <footer>
-    <a href="./index.html">WebStudio</a>
-    <p>
+  <footer class="footer">
+    <a href="./index.html" class="logo link"
+      >Web<span class="logo-span">Studio</span></a
+    >
+    <p class="footer-p">
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
     </p>
