--- a/index.html
+++ b/index.html
@@ -58,27 +58,27 @@
         <ul class="list">
           <li class="second-section-li">
             <h3 class="section-h">Strategy</h3>
-            <p class="section-p">
+            <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="second-section-li">
-            <h3>Punctuality</h3>
+            <h3 class="section-h">Punctuality</h3>
             <p class="section-p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="second-section-li">
-            <h3>Diligence</h3>
+            <h3 class="section-h">Diligence</h3>
             <p class="section-p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="second-section-li">
-            <h3>Technologies</h3>
+            <h3 class="section-h">Technologies</h3>
             <p class="section-p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
