--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
         </li>
         <li>
           <button type="button" class="portfolio-first-section-button">
-            Desing
+            Design
           </button>
         </li>
         <li>
@@ -91,7 +91,7 @@
         <li>
           <a href="" class="link"
             ><img src="./images/img6.jpg" alt="img" width="360" height="300" />
-            <h2 class="section-h">Meditaion App</h2>
+            <h2 class="section-h">Meditation App</h2>
             <p class="section-p">App</p></a
           >
         </li>
