--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <ul class="list">
           <li class="second-section-li">
             <h3 class="section-h">Strategy</h3>
-            <p>
+            <p class="section-p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
