--- a/portfolio.html
+++ b/portfolio.html
@@ -3,23 +3,19 @@
   <meta
     name="description"
     content="Effective Solutions
-  for Your Business"
-  />
+  for Your Business" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet"
-  />
+    rel="stylesheet" />
   <title>Webstudio</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <header>
     <nav class="nav">
-      <a href="./index.html" class="logo link"
-        >Web<span class="logo-span">Studio</span></a
-      >
+      <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
       <ul class="list">
         <li class="nav-li-first">
           <a href="./index.html" class="link">Studio</a>
@@ -27,15 +23,13 @@
         <li class="nav-li-first">
           <a href="./portfolio.html" class="link">Portfolio</a>
         </li>
-        <li class="nav-li-first"><a href="" class="link">Contacts</a></li>
+        <li class="nav-li-first"><a href class="link">Contacts</a></li>
       </ul>
     </nav>
     <address class="address">
       <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com" class="link address-link"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com" class="link address-link">info@devstudio.com</a>
         </li>
         <li>
           <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
@@ -75,75 +69,64 @@
       </ul>
       <ul class="list">
         <li>
-          <a href="" class="link"
-            ><img src="./images/img4.jpg" alt="img" width="360" height="300" />
+          <a href class="link"><img src="./images/img4.jpg" alt="img"
+              width="360" height="300" />
             <h2 class="section-h">Banking App Interface Concept</h2>
-            <p class="section-p">App</p></a
-          >
+            <p class="section-p">App</p></a>
         </li>
         <li>
-          <a href="" class="link"
-            ><img src="./images/img5.jpg" alt="img" width="360" height="300" />
+          <a href class="link"><img src="./images/img5.jpg" alt="img"
+              width="360" height="300" />
             <h2 class="section-h">Cashless Payment</h2>
-            <p class="section-p">Marketing</p></a
-          >
+            <p class="section-p">Marketing</p></a>
         </li>
         <li>
-          <a href="" class="link"
-            ><img src="./images/img6.jpg" alt="img" width="360" height="300" />
+          <a href class="link"><img src="./images/img6.jpg" alt="img"
+              width="360" height="300" />
             <h2 class="section-h">Meditation App</h2>
-            <p class="section-p">App</p></a
-          >
+            <p class="section-p">App</p></a>
         </li>
         <li>
-          <a href="" class="link"
-            ><img src="./images/img7.jpg" alt="img" width="360" height="300" />
+          <a href class="link"><img src="./images/img7.jpg" alt="img"
+              width="360" height="300" />
             <h2 class="section-h">Taxi Service</h2>
-            <p class="section-p">Marketing</p></a
-          >
+            <p class="section-p">Marketing</p></a>
         </li>
         <li>
-          <a href="" class="link"
-            ><img src="./images/img8.jpg" alt="img" width="360" height="300" />
+          <a href class="link"><img src="./images/img8.jpg" alt="img"
+              width="360" height="300" />
             <h2 class="section-h">Screen Illustrations</h2>
-            <p class="section-p">Design</p></a
-          >
+            <p class="section-p">Design</p></a>
         </li>
         <li>
-          <a href="" class="link"
-            ><img src="./images/img9.jpg" alt="img" width="360" height="300" />
+          <a href class="link"><img src="./images/img9.jpg" alt="img"
+              width="360" height="300" />
             <h2 class="section-h">Online Courses</h2>
-            <p class="section-p">Marketing</p></a
-          >
+            <p class="section-p">Marketing</p></a>
         </li>
         <li>
-          <a href="" class="link"
-            ><img src="./images/img10.jpg" alt="img" width="360" height="300" />
+          <a href class="link"><img src="./images/img10.jpg" alt="img"
+              width="360" height="300" />
             <h2 class="section-h">Instagram Stories Concept</h2>
-            <p class="section-p">Design</p></a
-          >
+            <p class="section-p">Design</p></a>
         </li>
         <li>
-          <a href="" class="link"
-            ><img src="./images/img11.jpg" alt="img" width="360" height="300" />
+          <a href class="link"><img src="./images/img11.jpg" alt="img"
+              width="360" height="300" />
             <h2 class="section-h">Organic Food</h2>
-            <p class="section-p">Web Site</p></a
-          >
+            <p class="section-p">Web Site</p></a>
         </li>
         <li>
-          <a href="" class="link"
-            ><img src="./images/img12.jpg" alt="img" width="360" height="300" />
+          <a href class="link"><img src="./images/img12.jpg" alt="img"
+              width="360" height="300" />
             <h2 class="section-h">Fresh Coffee</h2>
-            <p class="section-p">Web Site</p></a
-          >
+            <p class="section-p">Web Site</p></a>
         </li>
       </ul>
     </section>
   </main>
   <footer class="footer">
-    <a href="./index.html" class="logo link"
-      >Web<span class="logo-span">Studio</span></a
-    >
+    <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
     <p class="footer-p">
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
