--- a/index.html
+++ b/index.html
@@ -52,34 +52,35 @@
           Order Service
         </button>
       </section>
+      
+      <section class="features">
 
-      <section>
         <h2>123</h2>
         <ul class="list">
           <li class="second-section-li">
-            <h3 class="section-h">Strategy</h3>
-            <p class="section-p">
+            <h3 class="section-h features-title">Strategy</h3>
+            <p class="section-p features-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="second-section-li">
-            <h3 class="section-h">Punctuality</h3>
-            <p class="section-p">
+            <h3 class="section-h features-title">Punctuality</h3>
+            <p class="section-p features-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="second-section-li">
-            <h3 class="section-h">Diligence</h3>
-            <p class="section-p">
+            <h3 class="section-h features-title">Diligence</h3>
+            <p class="section-p features-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="second-section-li">
-            <h3 class="section-h">Technologies</h3>
-            <p class="section-p">
+            <h3 class="section-h features-title">Technologies</h3>
+            <p class="section-p features-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -159,3 +160,4 @@
     </footer>
   </body>
 </html>
+  
