--- a/index.html
+++ b/index.html
@@ -52,34 +52,35 @@
           Order Service
         </button>
       </section>
+      
+      <section class="features">
 
-      <section>
         <h2>123</h2>
         <ul class="list">
           <li class="second-section-li">
-            <h3 class="section-h">Strategy</h3>
-            <p class="section-p">
+            <h3 class="section-h features-title">Strategy</h3>
+            <p class="section-p features-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="second-section-li">
-            <h3 class="section-h">Punctuality</h3>
-            <p class="section-p">
+            <h3 class="section-h features-title">Punctuality</h3>
+            <p class="section-p features-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="second-section-li">
-            <h3 class="section-h">Diligence</h3>
-            <p class="section-p">
+            <h3 class="section-h features-title">Diligence</h3>
+            <p class="section-p features-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="second-section-li">
-            <h3 class="section-h">Technologies</h3>
-            <p class="section-p">
+            <h3 class="section-h features-title">Technologies</h3>
+            <p class="section-p features-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -106,8 +107,8 @@
         <h2 class="forth-section-h">Our Team</h2>
         <ul class="list">
           <li class="forth-section-li">
-            <h3 class="section-h features-title">Mark Guerrero</h3>
-            <p class="section-p features-paragraph">Product Designer</p>
+            <h3 class="section-h">Mark Guerrero</h3>
+            <p class="section-p">Product Designer</p>
             <img
               src="./images/team1.jpg"
               alt="team1"
@@ -116,8 +117,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="section-h features-title">Tom Ford</h3>
-            <p class="section-p features-paragraph">Frontend Developer</p>
+            <h3 class="section-h">Tom Ford</h3>
+            <p class="section-p">Frontend Developer</p>
             <img
               src="./images/team2.jpg"
               alt="team2"
@@ -126,8 +127,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="section-h features-title">Camila Garcia</h3>
-            <p class="section-p features-paragraph">Marketing</p>
+            <h3 class="section-h">Camila Garcia</h3>
+            <p class="section-p">Marketing</p>
             <img
               src="./images/team3.jpg"
               alt="team3"
@@ -136,8 +137,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="section-h features-title">Daniel Wilson</h3>
-            <p class="section-p features-paragraph">UI Designer</p>
+            <h3 class="section-h">Daniel Wilson</h3>
+            <p class="section-p">UI Designer</p>
             <img
               src="./images/team4.jpg"
               alt="team4"
@@ -159,3 +160,4 @@
     </footer>
   </body>
 </html>
+  
