--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
         </ul>
       </section>
 
-      <section class="forth-section">
+      <section class="forth-section features">
         <h2 class="forth-section-h">Our Team</h2>
         <ul class="list">
           <li class="forth-section-li">
-            <h3 class="section-h">Mark Guerrero</h3>
-            <p class="section-p">Product Designer</p>
+            <h3 class="section-h features-title">Mark Guerrero</h3>
+            <p class="section-p features-paragraph">Product Designer</p>
             <img
               src="./images/team1.jpg"
               alt="team1"
@@ -117,8 +117,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="section-h">Tom Ford</h3>
-            <p class="section-p">Frontend Developer</p>
+            <h3 class="section-h features-title">Tom Ford</h3>
+            <p class="section-p features-paragraph">Frontend Developer</p>
             <img
               src="./images/team2.jpg"
               alt="team2"
@@ -127,8 +127,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="section-h">Camila Garcia</h3>
-            <p class="section-p">Marketing</p>
+            <h3 class="section-h features-title">Camila Garcia</h3>
+            <p class="section-p features-paragraph">Marketing</p>
             <img
               src="./images/team3.jpg"
               alt="team3"
@@ -137,8 +137,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="section-h">Daniel Wilson</h3>
-            <p class="section-p">UI Designer</p>
+            <h3 class="section-h features-title">Daniel Wilson</h3>
+            <p class="section-p features-paragraph">UI Designer</p>
             <img
               src="./images/team4.jpg"
               alt="team4"
