--- a/index.html
+++ b/index.html
@@ -19,34 +19,34 @@
   <body>
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-span">Studio</span></a
+        <a href="./index.html" class="logo link blue-color"
+          >Web<span class="black-color">Studio</span></a
         >
         <ul class="list">
-          <li class="nav-li-first">
-            <a href="./index.html" class="link">Studio</a>
+          <li class="nav-li-first black-color">
+            <a href="./index.html" class="link blue-color">Studio</a>
           </li>
-          <li class="nav-li-first">
-            <a href="./portfolio.html" class="link">Portfolio</a>
+          <li class="nav-li-first black-color">
+            <a href="./portfolio.html" class="link blue-color">Portfolio</a>
           </li>
-          <li class="nav-li-first"><a href="" class="link">Contacts</a></li>
+          <li class="nav-li-first black-color"><a href="" class="link blue-color">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link address-link"
+            <a href="mailto:info@devstudio.com" class="link address-link blue-color"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link blue-color">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section class="first-section">
+      <section class="black-color">
         <h1 class="first-section-h">Effective Solutions for Your Business</h1>
         <button type="button" class="first-section-button">
           Order Service
@@ -57,28 +57,28 @@
 
         <h2>123</h2>
         <ul class="list">
-          <li class="second-section-li">
+          <li class="second-section-li black-color">
             <h3 class="section-h features-title">Strategy</h3>
             <p class="section-p features-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="second-section-li">
+          <li class="second-section-li black-color">
             <h3 class="section-h features-title">Punctuality</h3>
             <p class="section-p features-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="second-section-li">
+          <li class="second-section-li black-color">
             <h3 class="section-h features-title">Diligence</h3>
             <p class="section-p features-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="second-section-li">
+          <li class="second-section-li black-color">
             <h3 class="section-h features-title">Technologies</h3>
             <p class="section-p features-paragraph">
               Design practice focused on digital experiences. We bring forth a
@@ -89,7 +89,7 @@
       </section>
 
       <section>
-        <h2 class="third-section-h">What are we doing</h2>
+        <h2 class="third-section-h black-color">What are we doing</h2>
         <ul class="list">
           <li>
             <img src="./images/img1.jpg" alt="img1" width="360" height="300" />
@@ -103,7 +103,7 @@
         </ul>
       </section>
 
-      <section class="forth-section features">
+      <section class="forth-section features black-color">
         <h2 class="forth-section-h">Our Team</h2>
         <ul class="list">
           <li class="forth-section-li">
@@ -149,9 +149,9 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="logo-span">Studio</span></a
+    <footer class="black-color">
+      <a href="./index.html" class="logo link blue-color"
+        >Web<span class="logo-span-footer">Studio</span></a
       >
       <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
