--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
           >Web<span class="black-color">Studio</span></a
         >
         <ul class="list">
-          <li class="nav-li-first black-color">
-            <a href="./index.html" class="link blue-color">Studio</a>
+          <li class="nav-li-first ">
+            <a href="./index.html" class="link black-color">Studio</a>
           </li>
-          <li class="nav-li-first black-color">
-            <a href="./portfolio.html" class="link blue-color">Portfolio</a>
+          <li class="nav-li-first ">
+            <a href="./portfolio.html" class="link black-color">Portfolio</a>
           </li>
-          <li class="nav-li-first black-color"><a href="" class="link blue-color">Contacts</a></li>
+          <li class="nav-li-first "><a href="" class="link black-color">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link address-link blue-color"
+            <a href="mailto:info@devstudio.com" class="link address-link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link blue-color">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link address-link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -103,12 +103,12 @@
         </ul>
       </section>
 
-      <section class="forth-section features black-color">
+      <section class="forth-section black-color about-team">
         <h2 class="forth-section-h">Our Team</h2>
         <ul class="list">
           <li class="forth-section-li">
-            <h3 class="section-h features-title">Mark Guerrero</h3>
-            <p class="section-p features-paragraph">Product Designer</p>
+            <h3 class="section-h about-team-title">Mark Guerrero</h3>
+            <p class="section-p about-team-paragraph">Product Designer</p>
             <img
               src="./images/team1.jpg"
               alt="team1"
@@ -117,8 +117,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="section-h features-title">Tom Ford</h3>
-            <p class="section-p features-paragraph">Frontend Developer</p>
+            <h3 class="section-h about-team-title">Tom Ford</h3>
+            <p class="section-p about-team-paragraph">Frontend Developer</p>
             <img
               src="./images/team2.jpg"
               alt="team2"
@@ -127,8 +127,8 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="section-h features-title">Camila Garcia</h3>
-            <p class="section-p features-paragraph">Marketing</p>
+            <h3 class="section-h about-team-title">Camila Garcia</h3>
+            <p class="section-p about-team-paragraph">Marketing</p>
             <img
               src="./images/team3.jpg"
               alt="team3"
