--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </address>
     </header>
     <main>
-      <section class="black-color">
+      <section class="">
         <h1 class="">Effective Solutions for Your Business</h1>
         <button type="button" class="first-section-button">
           Order Service
@@ -57,30 +57,30 @@
 
         <h2 class="section-title">123</h2>
         <ul class="list">
-          <li class="second-section-li black-color">
+          <li class="second-section-li ">
             <h3 class="section-title-sub">Strategy</h3>
-            <p class="section-p features-paragraph">
+            <p class="section-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="second-section-li black-color">
+          <li class="second-section-li ">
             <h3 class="section-title-sub">Punctuality</h3>
-            <p class="section-p features-paragraph">
+            <p class="section-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="second-section-li black-color">
+          <li class="second-section-li ">
             <h3 class="section-title-sub">Diligence</h3>
-            <p class="section-p features-paragraph">
+            <p class="section-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="second-section-li black-color">
+          <li class="second-section-li ">
             <h3 class="section-title-sub">Technologies</h3>
-            <p class="section-p features-paragraph">
+            <p class="section-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -103,12 +103,12 @@
         </ul>
       </section>
 
-      <section class="forth-section black-color about-team">
+      <section class="forth-section about-team">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
           <li class="forth-section-li">
             <h3 class="section-title-sub">Mark Guerrero</h3>
-            <p class="section-p about-team-paragraph">Product Designer</p>
+            <p class="section-paragraph">Product Designer</p>
             <img
               src="./images/team1.jpg"
               alt="team1"
@@ -118,7 +118,7 @@
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Tom Ford</h3>
-            <p class="section-p about-team-paragraph">Frontend Developer</p>
+            <p class="section-paragraph">Frontend Developer</p>
             <img
               src="./images/team2.jpg"
               alt="team2"
@@ -128,7 +128,7 @@
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Camila Garcia</h3>
-            <p class="section-p about-team-paragraph">Marketing</p>
+            <p class="section-paragraph">Marketing</p>
             <img
               src="./images/team3.jpg"
               alt="team3"
@@ -138,7 +138,7 @@
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Daniel Wilson</h3>
-            <p class="section-p features-paragraph">UI Designer</p>
+            <p class="section-paragraph">UI Designer</p>
             <img
               src="./images/team4.jpg"
               alt="team4"
@@ -149,7 +149,7 @@
         </ul>
       </section>
     </main>
-    <footer class="black-color">
+    <footer class="">
       <a href="./index.html" class="logo link blue-color"
         >Web<span class="logo-span-footer">Studio</span></a
       >
