--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       </address>
     </header>
     <main>
-      <section class="">
-        <h1 class="">Effective Solutions for Your Business</h1>
+      <section class="hero">
+        <h1 class="section-primary-title">Effective Solutions for Your Business</h1>
         <button type="button" class="first-section-button">
           Order Service
         </button>
