--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </ul>
       </section>
     </main>
-    <footer class>
+    <footer class="footer-items">
       <a href="./index.html" class="logo link blue-color">Web<span
           class="logo-span-footer">Studio</span></a>
       <p class="footer-p">
