--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
             <a href="./portfolio.html" class="link black-color">Portfolio</a>
           </li>
           <li class="nav-li">
-            <a href="#" class="link black-color">Contacts</a>
+            <a href="" class="link black-color">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -81,63 +81,63 @@
         </ul>
         <ul class="list">
           <li>
-            <a href="#" class="link"
+            <a href="" class="link"
               ><img src="./images/img4.jpg" alt="img" width="360" height="300" />
               <h2 class="section-title-sub">Banking App Interface Concept</h2>
               <p class="section-paragraph">App</p></a
             >
           </li>
           <li>
-            <a href="#" class="link"
+            <a href="" class="link"
               ><img src="./images/img5.jpg" alt="img" width="360" height="300" />
               <h2 class="section-title-sub">Cashless Payment</h2>
               <p class="section-paragraph">Marketing</p></a
             >
           </li>
           <li>
-            <a href="#" class="link"
+            <a href="" class="link"
               ><img src="./images/img6.jpg" alt="img" width="360" height="300" />
               <h2 class="section-title-sub">Meditation App</h2>
               <p class="section-paragraph">App</p></a
             >
           </li>
           <li>
-            <a href="#" class="link"
+            <a href="" class="link"
               ><img src="./images/img7.jpg" alt="img" width="360" height="300" />
               <h2 class="section-title-sub">Taxi Service</h2>
               <p class="section-paragraph">Marketing</p></a
             >
           </li>
           <li>
-            <a href="#" class="link"
+            <a href="" class="link"
               ><img src="./images/img8.jpg" alt="img" width="360" height="300" />
               <h2 class="section-title-sub">Screen Illustrations</h2>
               <p class="section-paragraph">Design</p></a
             >
           </li>
           <li>
-            <a href="#" class="link"
+            <a href="" class="link"
               ><img src="./images/img9.jpg" alt="img" width="360" height="300" />
               <h2 class="section-title-sub">Online Courses</h2>
               <p class="section-paragraph">Marketing</p></a
             >
           </li>
           <li>
-            <a href="#" class="link"
+            <a href="" class="link"
               ><img src="./images/img10.jpg" alt="img" width="360" height="300" />
               <h2 class="section-title-sub">Instagram Stories Concept</h2>
               <p class="section-paragraph">Design</p></a
             >
           </li>
           <li>
-            <a href="#" class="link"
+            <a href="" class="link"
               ><img src="./images/img11.jpg" alt="img" width="360" height="300" />
               <h2 class="section-title-sub">Organic Food</h2>
               <p class="section-paragraph">Web Site</p></a
             >
           </li>
           <li>
-            <a href="#" class="link"
+            <a href="" class="link"
               ><img src="./images/img12.jpg" alt="img" width="360" height="300" />
               <h2 class="section-title-sub">Fresh Coffee</h2>
               <p class="section-paragraph">Web Site</p></a
