--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
         </ul>
       </section>
 
-      <section class="forth-section about-team">
+      <section class="about-team">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
-          <li class="forth-section-li">
-            <h3 class="title-team">Mark Guerrero</h3>
+          <li class="about-team-list">
+            <h3 class="about-team-title">Mark Guerrero</h3>
             <p class="section-paragraph">Product Designer</p>
             <img
               src="./images/team1.jpg"
@@ -121,8 +121,8 @@
               height="260"
             >
           </li>
-          <li class="forth-section-li">
-            <h3 class="title-team">Tom Ford</h3>
+          <li class="about-team-list">
+            <h3 class="about-team-title">Tom Ford</h3>
             <p class="section-paragraph">Frontend Developer</p>
             <img
               src="./images/team2.jpg"
@@ -131,8 +131,8 @@
               height="260"
             >
           </li>
-          <li class="forth-section-li">
-            <h3 class="title-team">Camila Garcia</h3>
+          <li class="about-team-list">
+            <h3 class="about-team-title">Camila Garcia</h3>
             <p class="section-paragraph">Marketing</p>
             <img
               src="./images/team3.jpg"
@@ -141,8 +141,8 @@
               height="260"
             >
           </li>
-          <li class="forth-section-li">
-            <h3 class="title-team">Daniel Wilson</h3>
+          <li class="about-team-list">
+            <h3 class="about-team-title">Daniel Wilson</h3>
             <p class="section-paragraph">UI Designer</p>
             <img
               src="./images/team4.jpg"
