--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </ul>
       </address>
     </header>
-    <main>
+  <main>
       <section class="hero">
         <h1 class="section-primary-title">
           Effective Solutions for Your Business
@@ -62,29 +62,29 @@
       <section class="features">
         <h2 class="section-title">123</h2>
         <ul class="list">
-          <li class="second-section-li">
-            <h3 class="section-title-sub">Strategy</h3>
+          <li>
+            <h3 class="about-team-title">Strategy</h3>
             <p class="section-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="second-section-li">
-            <h3 class="section-title-sub">Punctuality</h3>
+          <li>
+            <h3 class="about-team-title">Punctuality</h3>
             <p class="section-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="second-section-li">
-            <h3 class="section-title-sub">Diligence</h3>
+          <li>
+            <h3 class="about-team-title">Diligence</h3>
             <p class="section-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="second-section-li">
-            <h3 class="section-title-sub">Technologies</h3>
+          <li>
+            <h3 class="about-team-title">Technologies</h3>
             <p class="section-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
