--- a/index.html
+++ b/index.html
@@ -146,33 +146,33 @@
         <ul class="list">
           <li>
             <img src="./images/img1.jpg" alt="img1" width="360" height="300">
-            <h3 class="">Banking App</h3>
-            <p class="">App</p>
+            <h3 class="our-portfolio-title">Banking App</h3>
+            <p class="our-portfolio-text">App</p>
           </li>
           <li>
             <img src="./images/img2.jpg" alt="img2" width="360" height="300">
-            <h3 class="">Cashless Payment</h3>
-            <p class="">Marketing</p>
+            <h3 class="our-portfolio-title">Cashless Payment</h3>
+            <p class="our-portfolio-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img3.jpg" alt="img3" width="360" height="300">
-            <h3 class="">Meditation App</h3>
-            <p class="">App</p>
+            <h3 class="our-portfolio-title">Meditation App</h3>
+            <p class="our-portfolio-text">App</p>
           </li>
           <li>
             <img src="./images/img4.jpg" alt="img3" width="360" height="300">
-            <h3 class="">Taxi Service</h3>
-            <p class="">Marketing</p>
+            <h3 class="our-portfolio-title">Taxi Service</h3>
+            <p class="our-portfolio-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img5.jpg" alt="img3" width="360" height="300">
-            <h3 class="">Screen Illustrations</h3>
-            <p class="">Design</p>
+            <h3 class="our-portfolio-title">Screen Illustrations</h3>
+            <p class="our-portfolio-text">Design</p>
           </li>
           <li>
             <img src="./images/img6.jpg" alt="img3" width="360" height="300">
-            <h3 class="">Online Courses</h3>
-            <p class="">Marketing</p>
+            <h3 class="our-portfolio-title">Online Courses</h3>
+            <p class="our-portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
